# xploit

./: .gitmodules  Procfile  admin_email  cabal.project  curls  default.nix  hie.yaml  hls.wrapper  module.nix
.sass-cache/7f00e11cd0262f2475c44befc99087b207f3e397/: main.scssc
backend/: backend.cabal  hie.yaml
backend/src/: Backend.hs
backend/src-bin/: main.hs
backend/src/Server/: Base.hs  DBQuery.hs  Handler.hs  Instances.hs  Query.hs  RunQuery.hs
backend/src/Server/DB/: Query.hs  Schema.hs
common/: common.cabal  hie.yaml
common/src/Common/: Api.hs  Route.hs  Util.hs
common/src/Common/DB/: Instances.hs
common/src/Common/Server/: Api.hs
frontend/: frontend.cabal  hie.yaml
frontend/src/: ActionIxSelector.hs  BetWidgets.hs  FileInput.hs  Frontend.hs  GameLogic.hs  GameTable.hs  Handlers.hs  Head.hs  PrettyBetAmount.hs  QueryInput.hs  RangeCalc.hs  RangeDisplay.hs  Slider.hs  TabView.hs  Util.hs
frontend/src-bin/: main.hs
frontend/src/DB/: Stats.hs
frontend/src/Review/: Widget.hs
static/css/: main.css  main.css.map
static/scss/: main.scss
static:css/: main.css  main.css.map
test-app/: backend  frontend.jsexe.assets  static.assets  version
