name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , basic-prelude
               , common
               , containers
               , extra
               , lens
               , obelisk-frontend
               , obelisk-route
               , jsaddle
               , jsaddle-dom
               , lattices
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-generated-static
               , poker-base
               , prettyprinter
               , reflex-dom
               , servant
               , servant-reflex
               , xploit-query
               , megaparsec
               , poker-game
               , poker-histories
               , safe-money
               , text
  exposed-modules:
    BetWidgets
    Frontend
    GameLogic
    GameTable
    Handlers
    Head
    PrettyBetAmount
    RangeCalc
    RangeDisplay
    Slider
    Util
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  ghc-options: -threaded -O0 -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -fno-show-valid-hole-fits
  if impl(ghcjs)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER
  if os(darwin)
    ghc-options: -dynamic
